<resources>
    <string name="app_name">TimeBank</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btn_save">存入</string>
    <string name="btn_use">使用</string>
    <string name="btn_off">停止</string>
    <string name="ahievement_Describe">描述:</string>
    <string name="ahievement_Title">标题:</string>
    <string name="ahievement_Finish">完成后得到的时间:</string>
    <string name="minute">分钟</string>
    <string name="every">每</string>
    <string name="day">天可以做</string>
    <string name="times">次</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_record">record</string>
    <string name="startTime">开始时间</string>
    <string name="beginHave">原始剩余</string>
    <string name="nowHave">现在剩余</string>
    <string name="diff">差值</string>
    <string name="passedTime">经历时间</string>
    <string name="Rate">兑换比例</string>
</resources>
