<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:showDividers="middle"
    android:divider="@drawable/divider">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ahievement_Title"
            android:id="@+id/textView4"
            android:textIsSelectable="false"
            android:textSize="@dimen/hitTextSize" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ahievement_Describe"
        android:id="@+id/textView5"
        android:layout_marginTop="28dp"
        android:textSize="@dimen/hitTextSize"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/add_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:background="@android:drawable/edit_text"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true">
    </EditText>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="151dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ahievement_Finish"
            android:id="@+id/textView6"
            android:textSize="@dimen/hitTextSize"
            android:layout_marginTop="77dp"
            android:layout_below="@+id/add_content"
            android:layout_alignParentStart="true" />
        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker"
            android:layout_below="@+id/add_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:textSize="@dimen/hitTextSize"
            android:layout_alignTop="@+id/textView6"
            android:layout_toEndOf="@+id/numberPicker"
            android:text="@string/minute"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every"
            android:textSize="@dimen/hitTextSize"
            android:id="@+id/textView7"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker2"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textSize="@dimen/hitTextSize"
            android:id="@+id/textView8"
            android:layout_gravity="center_vertical" />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker3"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/times"
            android:textSize="@dimen/hitTextSize"
            android:id="@+id/textView9"
            android:layout_gravity="center_vertical" />

    </LinearLayout>


</LinearLayout>